[tool.poetry]
name = "flask-dependency-test"
version = "0.1.0"
description = ""
authors = ["Selcuk Sasoglu <selcuk.sasoglu@postnl.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.0.3"
dependency-injector = "^4.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
